# PolygonVisulaiser

./: CMakeLists.txt  README.md  build.sh  imgui.ini  point.hpp  polygon.hpp
src/: main.cpp
src/Logic/: Point.hpp  Polygon.cpp  Polygon.hpp
src/Ui/: Button.cpp  Button.hpp  State.hpp  Window.cpp  Window.hpp
